[gd_scene load_steps=18 format=3 uid="uid://csx22cryo0iv0"]

[ext_resource type="Script" path="res://main.gd" id="1_ufh4c"]
[ext_resource type="PackedScene" uid="uid://b2mryi4ci1g35" path="res://hud.tscn" id="3_4u6pc"]
[ext_resource type="AudioStream" uid="uid://csvohsgv8cxfl" path="res://sounds/trilha aqua game 2.mp3" id="3_eip3a"]
[ext_resource type="AudioStream" uid="uid://b2qwevhofpq0o" path="res://sounds/trilha aqua game trilha 1 previa.mp3" id="3_m6cy0"]
[ext_resource type="PackedScene" uid="uid://ds7odrisj6q82" path="res://character_body_2d.tscn" id="7_kkwop"]
[ext_resource type="PackedScene" uid="uid://djgyvbm6dglio" path="res://praca.tscn" id="7_s7ujm"]
[ext_resource type="AudioStream" uid="uid://5mju1hhsm71m" path="res://sounds/trilha balneario.wav" id="10_4i3it"]
[ext_resource type="AudioStream" uid="uid://dk3bhy0mnaro5" path="res://sounds/trilha aqua game 3.wav" id="10_v6yaw"]
[ext_resource type="PackedScene" uid="uid://doqpickhbibsx" path="res://balneario.tscn" id="11_7mojm"]
[ext_resource type="Texture2D" uid="uid://bka3cqpw336qn" path="res://img/LUA.png" id="11_mwyqk"]
[ext_resource type="Texture2D" uid="uid://8yd5nesb4cdw" path="res://img/reset.png" id="13_16pxi"]
[ext_resource type="FontFile" uid="uid://bah84uqpyf84q" path="res://fonts/EmilysCandy-Regular.ttf" id="13_jsnqx"]
[ext_resource type="PackedScene" uid="uid://dpe24lml0sq6u" path="res://city_map.tscn" id="13_p82sj"]
[ext_resource type="AudioStream" uid="uid://lnum31e7yfgx" path="res://sounds/trilha lunar.wav" id="14_uj1su"]
[ext_resource type="PackedScene" uid="uid://b8wk3pt07sp1m" path="res://sebo.tscn" id="16_526j1"]
[ext_resource type="AudioStream" uid="uid://drpr7ny4uujq3" path="res://sounds/som et.wav" id="16_ebr23"]
[ext_resource type="Texture2D" uid="uid://q4rej7gi3aec" path="res://img/indicator.png" id="17_wn7es"]

[node name="Main" type="Node"]
script = ExtResource("1_ufh4c")

[node name="HUD" parent="." instance=ExtResource("3_4u6pc")]
visible = false

[node name="SeboPosition" type="Marker2D" parent="."]
position = Vector2(1180, 570)

[node name="HUDMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_m6cy0")
volume_db = 20.0

[node name="CityMap" parent="." instance=ExtResource("13_p82sj")]
visible = false

[node name="Sebo" parent="." instance=ExtResource("16_526j1")]
visible = false

[node name="SeboMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_eip3a")
volume_db = 10.0

[node name="Praca" parent="." instance=ExtResource("7_s7ujm")]
visible = false

[node name="PracaMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_v6yaw")
volume_db = 10.0

[node name="PracaPosition" type="Marker2D" parent="."]
position = Vector2(550, 580)

[node name="Balneario" parent="." instance=ExtResource("11_7mojm")]
visible = false

[node name="BalnearioMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_4i3it")
volume_db = 10.0

[node name="Fim" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11_mwyqk")

[node name="Reset" type="TouchScreenButton" parent="Fim"]
position = Vector2(512, 297)
scale = Vector2(0.686667, 0.690037)
texture_normal = ExtResource("13_16pxi")

[node name="Label" type="Label" parent="Fim"]
z_index = 4069
layout_mode = 0
offset_left = 6.0
offset_top = 21.0
offset_right = 1276.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("13_jsnqx")
theme_override_font_sizes/font_size = 70
text = "Obrigado por ajudar os astronautas!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FimMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_uj1su")
volume_db = 10.0

[node name="EtMusic" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("16_ebr23")
volume_db = 10.0

[node name="BalnearioPosition" type="Marker2D" parent="."]
visible = false
position = Vector2(600, 500)
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("7_kkwop")]
z_index = 2000
position = Vector2(700, 550)
scale = Vector2(0.65, 0.65)

[node name="Indicator" type="TextureRect" parent="."]
z_index = 4096
offset_left = 653.0
offset_top = 580.0
offset_right = 753.0
offset_bottom = 680.0
texture = ExtResource("17_wn7es")

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="finished" from="HUDMusic" to="." method="_on_hud_music_finished"]
[connection signal="pressed_balneario" from="CityMap" to="." method="_on_city_map_pressed_balneario"]
[connection signal="pressed_praca" from="CityMap" to="." method="_on_city_map_pressed_praca"]
[connection signal="pressed_sebo" from="CityMap" to="." method="_on_city_map_pressed_sebo"]
[connection signal="audiodica_finished" from="Sebo" to="." method="_on_sebo_audiodica_finished"]
[connection signal="go_back_scene" from="Sebo" to="." method="_on_sebo_go_back_scene"]
[connection signal="go_to_next_scene" from="Sebo" to="." method="_on_sebo_go_to_next_scene"]
[connection signal="leave" from="Sebo" to="." method="_on_sebo_leave"]
[connection signal="player_go_to" from="Sebo" to="." method="_on_sebo_player_go_to"]
[connection signal="stop_music" from="Sebo" to="." method="_on_sebo_stop_music"]
[connection signal="finished" from="SeboMusic" to="." method="_on_sebo_music_finished"]
[connection signal="go_back_scene" from="Praca" to="." method="_on_praca_go_back_scene"]
[connection signal="go_on_water" from="Praca" to="." method="_on_praca_go_on_water"]
[connection signal="go_to_next_scene" from="Praca" to="." method="_on_praca_go_to_next_scene"]
[connection signal="leave" from="Praca" to="." method="_on_praca_leave"]
[connection signal="player_go_to" from="Praca" to="." method="_on_praca_player_go_to"]
[connection signal="return_to_land" from="Praca" to="." method="_on_praca_return_to_land"]
[connection signal="finished" from="PracaMusic" to="." method="_on_praca_music_finished"]
[connection signal="go_back_scene" from="Balneario" to="." method="_on_balneario_go_back_scene"]
[connection signal="go_to_next_scene" from="Balneario" to="." method="_on_balneario_go_to_next_scene"]
[connection signal="leave" from="Balneario" to="." method="_on_balneario_leave"]
[connection signal="player_go_to" from="Balneario" to="." method="_on_balneario_player_go_to"]
[connection signal="finished" from="BalnearioMusic" to="." method="_on_balneario_music_finished"]
[connection signal="pressed" from="Fim/Reset" to="." method="_on_reset_pressed"]
[connection signal="is_idle" from="Player" to="." method="_on_player_is_idle"]
[connection signal="limite_direito" from="Player" to="." method="_on_player_limite_direito"]
[connection signal="limite_esquerdo" from="Player" to="." method="_on_player_limite_esquerdo"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
